@@ -3,12 +3,16 @@
 	<parent>
 		<groupId>eu.europa.ec.joinup.sd-dss</groupId>
 		<artifactId>sd-dss</artifactId>
-		<version>5.4.3</version>
+		<version>5.5.RC1</version>
 	</parent>
 
 	<artifactId>dss-token</artifactId>
 	<name>DSS Token</name>
 	<description>Token implementations for PKCS11, PKCS12, MsCapi and JKS</description>
+
+	<properties>
+		<module-name>jpms_dss_token</module-name>
+	</properties>
 
 	<dependencies>
 		<dependency>
@@ -21,6 +25,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>eu.europa.ec.joinup.sd-dss</groupId>
+			<artifactId>dss-spi</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
@@ -32,44 +41,4 @@
 		</dependency>
 	</dependencies>
 	
-	<profiles>
-		<profile>
-            <id>jdk19-plus</id>
-            <activation>
-                <jdk>[9,)</jdk>
-            </activation>
-            
-            <build>
-				<plugins>
-		              <plugin>
-						<artifactId>maven-compiler-plugin</artifactId>
-						<configuration>
-							<source>9</source>
-							<target>9</target>
-
-	                        <!-- jdk.crypto.cryptoki : SunPKCS11 -->
-	                        <compilerArgs>
-								<arg>--add-modules</arg>
-								<arg>jdk.crypto.cryptoki</arg>
-								
-								<arg>--add-exports</arg>
-								<arg>jdk.crypto.cryptoki/sun.security.pkcs11.wrapper=ALL-UNNAMED</arg>		
-														
-								<!-- Reflection at runtime -->
-								<arg>--add-opens</arg>
-								<arg>jdk.crypto.cryptoki/sun.security.pkcs11=ALL-UNNAMED</arg>
-							</compilerArgs>
-						</configuration>
-					</plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <argLine>--add-modules jdk.crypto.cryptoki</argLine>
-                        </configuration>
-                    </plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
 </project>
